<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colour"
    tools:context=".presentation.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/tv_registration"
            android:textStyle="bold"
            android:textSize="32dp"/>

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="8dp"
                android:textStyle="bold"
                android:hint="@string/tv_username"
                android:background="@drawable/et_bg_rounded"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="8dp"
                android:textStyle="bold"
                android:hint="@string/tv_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_bg_rounded"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/tv_password"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:inputType="textPassword"
                android:background="@drawable/et_bg_rounded"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/tv_register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="34dp"
                android:background="@drawable/et_bg_rounded"
                android:backgroundTint="@color/bg_red_light"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>